@@ -17,6 +17,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
+import java.util.stream.Collectors;
 
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
@@ -149,10 +150,12 @@ public class LiquidationReportController {
 
     @GetMapping
     public ResponseEntity<?> getLiquidationReport(
-            @RequestParam(defaultValue = "date") String sortBy,
-            @RequestParam(defaultValue = "asc") String sortOrder) {
+            @RequestParam(defaultValue = "createdAt") String sortBy,
+            @RequestParam(defaultValue = "desc") String sortOrder) {
         try {
-            List<Liquidation> liquidations = liquidationService.getAllLiquidations(sortBy, sortOrder);
+            // Map 'date' to 'createdAt' for sorting
+            String effectiveSortBy = sortBy.equals("date") ? "createdAt" : sortBy;
+            List<Liquidation> liquidations = liquidationService.getAllLiquidations(effectiveSortBy, sortOrder);
             List<Map<String, Object>> responseList = liquidations.stream().map(liquidation -> {
                 Map<String, Object> liquidationMap = new HashMap<>();
                 SubmittedBudget budget = liquidation.getSubmittedBudget();
@@ -168,7 +171,7 @@ public class LiquidationReportController {
                 liquidationMap.put("expenses", liquidation.getExpenses());
                 liquidationMap.put("username", liquidation.getUsername());
                 return liquidationMap;
-            }).toList();
+            }).collect(Collectors.toList());
             Map<String, Object> report = new HashMap<>();
             report.put("budgets", responseList);
             return ResponseEntity.ok(report);
@@ -178,6 +181,36 @@ public class LiquidationReportController {
             return new ResponseEntity<>(errorResponse, HttpStatus.INTERNAL_SERVER_ERROR);
         }
     }
+
+    @GetMapping("/{liquidationId}")
+    public ResponseEntity<?> getLiquidationById(@PathVariable Long liquidationId) {
+        Map<String, Object> response = new HashMap<>();
+        try {
+            Liquidation liquidation = liquidationService.getLiquidationById(liquidationId);
+            if (liquidation == null) {
+                response.put("error", "Liquidation not found with ID: " + liquidationId);
+                return new ResponseEntity<>(response, HttpStatus.NOT_FOUND);
+            }
+            // Map liquidation to include budgetName and amount
+            SubmittedBudget budget = liquidation.getSubmittedBudget();
+            response.put("liquidationId", liquidation.getLiquidationId());
+            response.put("budgetName", budget != null ? budget.getName() : "Unknown");
+            response.put("amount", budget != null ? budget.getTotal() : 0.0);
+            response.put("totalSpent", liquidation.getTotalSpent());
+            response.put("remainingBalance", liquidation.getRemainingBalance());
+            response.put("status", liquidation.getStatus().toString());
+            response.put("remarks", liquidation.getRemarks());
+            response.put("dateOfTransaction", liquidation.getDateOfTransaction());
+            response.put("createdAt", liquidation.getCreatedAt());
+            response.put("expenses", liquidation.getExpenses());
+            response.put("username", liquidation.getUsername());
+            return ResponseEntity.ok(response);
+        } catch (Exception e) {
+            response.put("error", "Failed to retrieve liquidation: " + e.getMessage());
+            return new ResponseEntity<>(response, HttpStatus.BAD_REQUEST);
+        }
+    }
+
 
     @GetMapping("/{liquidationId}/images/{expenseId}/{imageIndex}")
     public ResponseEntity<?> getLiquidationImage(
